# ROVI2

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md
camera_plugin/: CMakeLists.txt  package.xml
camera_plugin/src/: CameraPlugin.cpp  CameraPlugin.hpp  CameraPlugin.ui  plugin.json  qtros.cpp  qtros.h  ui_CameraPlugin.h
code/src/SamplePluginPA10/: CMakeLists.txt  package.xml
code/src/SamplePluginPA10/src/: .SamplePlugin.cpp.swp  SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui
code/src/caros/components/caros_teleoperation/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/components/caros_teleoperation/cmake/: use-c++11.cmake
code/src/caros/components/caros_teleoperation/launch/: caros_teleoperation.launch  caros_teleoperation_param.xml
code/src/caros/components/caros_teleoperation/src/: pose_teleoperate.cpp  teleoperation.cpp
code/src/caros/core/caros_common/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/core/caros_common/assets/: caros_node_statemachine.gv
code/src/caros/core/caros_common/cmake/: use-c++11.cmake
code/src/caros/core/caros_common/src/: caros_node_service_interface.cpp  common.cpp
code/src/caros/core/caros_common/test/: type_conversion.cpp
code/src/caros/core/caros_common_msgs/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/core/caros_common_msgs/msg/: CarosNodeState.msg  Q.msg
code/src/caros/core/caros_common_msgs/srv/: ConfigBool.srv  ConfigInt.srv  EmptySrv.srv
code/src/caros/core/caros_common_robwork/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/core/caros_common_robwork/src/: common_robwork.cpp
code/src/caros/core/caros_common_robwork/test/: type_conversion_robwork.cpp
code/src/caros/core/caros_common_robwork_msgs/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/core/caros_common_robwork_msgs/msg/: RwState.msg  RwStateData.msg
code/src/caros/core/caros_common_robwork_msgs/srv/: GetRwState.srv
code/src/caros/hwcomponents/caros_camera/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/hwcomponents/caros_camera/calibration_files/: basler_21420534.yaml  bumblebee_11072182.yaml  bumblebee_11072182_right.yaml  bumblebee_8511446.yaml  bumblebee_8511446_right.yaml
code/src/caros/hwcomponents/caros_camera/cfg/: Basler.cfg  Ensenso.cfg  PointGrey.cfg
code/src/caros/hwcomponents/caros_camera/cmake/: use-c++11.cmake
code/src/caros/hwcomponents/caros_camera/config/: viewer_bumblebee.rviz  viewer_ensenso.rviz
code/src/caros/hwcomponents/caros_camera/launch/: caros_camera.launch
code/src/caros/hwcomponents/caros_camera/src/: camera.cpp  (+6 more)
code/src/caros/hwcomponents/caros_netft/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/hwcomponents/caros_robotiq/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/hwcomponents/caros_schunkpg70/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/hwcomponents/caros_sdh/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/hwcomponents/caros_trakstar/: CMakeLists.txt  mainpage.md  package.xml  trakstar.yaml
code/src/caros/hwcomponents/caros_universalrobot/: CMakeLists.txt  mainpage.md  package.xml  rosdoc.yaml
code/src/caros/interfaces/caros_control/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/interfaces/caros_control_msgs/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/interfaces/caros_sensor/: CMakeLists.txt  mainpage.md  package.xml
code/src/caros/interfaces/caros_sensor_msgs/: CMakeLists.txt  mainpage.md  package.xml
code/src/rovi2_development/: CMakeLists.txt  package.xml  setup.py
code/src/rovi2_development/calibrations/: TEST_TEST_left_front_xXx.yaml  TEST_TEST_right_front_xXx.yaml  artificial_left.yaml  artificial_right.yaml  calibrationdata_55m_back_left.yaml  calibrationdata_55m_back_matlab.txt  calibrationdata_55m_back_right.yaml  default.yaml  hte.yaml  left_back.yaml  left_front.yaml  matlab_left_front.yaml  matlab_right_front.yaml  ost_front.yaml  right_back.yaml  right_front.yaml
code/src/rovi2_development/calibrations/back/: 20170515-152145.csv  calibrationSession.mat  hte_back.yaml  left.yaml  right.yaml
code/src/rovi2_development/calibrations/front/: calibrationSession2.mat  hte_front.csv  hte_front.yaml  left.yaml  right.yaml
code/src/rovi2_development/headers/: AnytimeRRT.hpp  ElipsisSampler.hpp  HsvAdjust.hpp  ImgConverter.hpp  LineSampler.hpp  RT_RRTNode.hpp  RT_RRT_Star.hpp  RT_RRT_Tree.hpp  TreePlotter.hpp  UnitBallSampler.hpp  kalman_estimator_node.hpp
code/src/rovi2_development/launch/: 3d_vision_test.launch  back_stereo_run.launch  bumblebee.launch  caros_universalrobot_param.xml  everything.launch  eye_to_hand_record.launch  front_stereo_run.launch  hand_to_eye.launch  image_test.launch  jehova.launch  kalman_full.launch  path_planner_tester.launch  pose_follower.launch  square_mover.launch  start_hw_node.launch  stereo_node.launch  stereo_run.launch  test_kalman.launch
code/src/rovi2_development/msg/: Trajectory3D.msg
code/src/rovi2_development/params/: bumblebee_config_file.yaml
code/src/rovi2_development/scripts/: 3DPoseLogger.py  QAnd3DPoseLogger.py  pointNormCaluclator.py  publish_calib.py  trajectory_plotter.py
code/src/rovi2_development/scripts/matlab/: readPJcustom.m  test.m
code/src/rovi2_development/src/: AnytimeRRT.cpp  ElipsisSampler.cpp  ForwardKinematics.cpp  ForwardKinematics.hpp  ForwardKinematics_node.cpp  Hand_to_eye.cpp  Hand_to_eye.hpp  HsvAdjust.cpp  ImgConverter.cpp  LineSampler.cpp  PoseFollower.cpp  RT_RRT_Star.cpp  TreePlotter.cpp  TreePlotter.hpp  UnitBallSampler.cpp  ball_traj_tester.cpp  frame_trans.cpp  hand_to_eye_calibration_node.cpp  image_detector_node.cpp  image_detector_node_left.cpp  image_detector_node_right.cpp  image_publisher.cpp  kalman_estimator_node.cpp  move_robot_node.cpp  opencv_node.cpp  opencv_node_bumblebee.cpp  path_planner_node.cpp  stereo_node.cpp
code/src/rovi2_development/src/RW_Live_plugin/: SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui
code/src/rovi2_development/src/YAMLCalibration/: YAMLCalibration.cpp  YAMLCalibration.hpp
(+258 files in other folders)
